--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,16 @@
           <artifactId>commons-io</artifactId>
           <version>2.5</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.9.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.9.1</version>
+      </dependency>
   </dependencies>
 
 </project>
