--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
           <scope>test</scope>
       </dependency>
       <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>6.8</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
           <groupId>commons-io</groupId>
           <artifactId>commons-io</artifactId>
           <version>2.5</version>
