--- a/tau/pom.xml
+++ b/tau/pom.xml
@@ -31,6 +31,16 @@
             <artifactId>selenium-support</artifactId>
             <version>3.141.59</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.3</version>
+        </dependency>
     </dependencies>
 
     <reporting>
@@ -42,5 +52,29 @@
             </plugin>
         </plugins>
     </reporting>
+
+    <!-- https://maven.apache.org/plugins/maven-clean-plugin/examples/delete_additional_files.html -->
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.1.0</version>
+                    <configuration>
+                        <filesets>
+                            <fileset>
+                                <directory>resources/screenshots</directory>
+                                <includes>
+                                    <include>**/*.png</include>
+                                </includes>
+                                <excludes/>
+                                <followSymlinks>false</followSymlinks>
+                            </fileset>
+                        </filesets>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
