--- a/tau2/pom.xml
+++ b/tau2/pom.xml
@@ -31,11 +31,32 @@
     <build>
         <pluginManagement>
             <plugins>
-                <!-- https://maven.apache.org/surefire/maven-surefire-plugin/usage.html -->
+                <!-- https://maven.apache.org/surefire/maven-surefire-plugin/usage.html
+                     mvn test
+                     mvn -Dtest=AlertsTests test
+                     mvn -Dtest=AlertsTests#testAcceptAlert test
+                     mvn clean -Dtest=AlertsTests#testAcceptAlert test
+                 -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.5</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.3.2</version>
+                    <configuration>
+                        <filesets>
+                            <fileset>
+                                <directory>resources/screenshots</directory>
+                                <includes>
+                                    <include>**/*.png</include>
+                                </includes>
+                                <excludes/>
+                                <followSymlinks>false</followSymlinks>
+                            </fileset>
+                        </filesets>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
